用户界面 - 收藏商品列表

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,7 +53,7 @@ body {
 	}
 }
 
-.products-index-page {
+.products-index-page, .products-favorite-page {
   .pagination {
     margin-right: 5px;
   }
